# stuart-assistant-ai

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  NEXT-STEPS.md  PLAN.md  README.md  TASKS.md  TODO-List.md  assistant.py  command_handler.py  direct-dependencies.md  main.py  pyproject.toml  pytest.ini  requirements-compiled.txt  requirements-dev.txt  requirements.txt  stuart_calendar.ics  tmp_file_handler.py  update-requirements.sh
.github/workflows/: ci.yml
docs/roadmap/: FUTURE_AGENTS.md  NEXT-STEPS.md  next-steps.md
docs/tasks/: KANBAN_TASKS.md  TASKS.md
stuart_ai/: enums.py  tools.py
stuart_ai/LLM/: ollama_llm.py
stuart_ai/agents/: coding_agent.py  content_agent.py  web_search_agent.py
stuart_ai/agents/productivity/: calendar_manager.py
stuart_ai/agents/rag/: document_store.py  rag_agent.py
stuart_ai/api/: app.py
stuart_ai/core/: assistant.py  config.py  exceptions.py  logger.py  memory.py  state.py
stuart_ai/llm/: ollama_llm.py
stuart_ai/services/: command_handler.py  semantic_router.py
stuart_ai/tools/: system_tools.py
stuart_ai/utils/: audio_utils.py  prompt_sanitizer.py  tmp_file_handler.py
tests/: test_audio_utils.py  test_calendar_manager.py  test_cancel_command.py  test_cancel_regex.py  test_check_calendar_args.py  test_command_handler.py  test_document_store.py  test_edge_tts_integration.py  test_fuzz_logic.py  test_memory.py  test_ollama_llm.py  test_rag_agent.py  test_semantic_router.py  test_settings.py  test_tools.py  test_tools_args.py  test_web_search_agent.py  test_whisper_prompt.py
