[project]
name = "stuart-ai"
version = "0.1.0"
description = "Voice-activated AI assistant for Portuguese (pt-BR)"
requires-python = ">=3.14"
dependencies = [
    "faster-whisper",
    "SpeechRecognition",
    "langchain-community",
    "langchain-core",
    "langchain-ollama",
    "langchain-text-splitters",
    "pydantic-settings",
    "aiofiles",
    "aiohttp",
    "coloredlogs",
    "dateparser",
    "edge-tts",
    "thefuzz",
    "python-Levenshtein",
    "wikipedia",
    "chromadb",
    "pypdf",
    "playsound==1.2.2",
    "fastapi",
    "uvicorn",
    "trafilatura",
    "youtube-transcript-api",
    "icalendar>=7.0.3",
    "ddgs>=9.11.4",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
addopts = "-p no:warnings --strict-markers --cov=stuart_ai --cov-report=html"
markers = ["asyncio: mark test as async"]

[tool.uv]
package = false
